8-ФЗ. 2я итерация